--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       <div id="msg" style="margin-top:10px;color:#0a0"></div>
     </section>
 
+    <!-- SDK MUSÍ BYŤ TU -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    
-const SUPABASE_URL = "https://ktdvgmwrqwznuikehpmk.supabase.co";
-const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imt0ZHZnbXdycXd6bnVpa2VocG1rIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUwMzg3MTUsImV4cCI6MjA3MDYxNDcxNX0.2YvdIUC41fYsXsT_zJyf2VKvOi2obsJ27fRewQEajmE";
-      
+    <script>
+      const SUPABASE_URL = "https://ktdvgmwrqwznuikehpmk.supabase.co";
+      const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imt0ZHZnbXdycXd6bnVpa2VocG1rIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUwMzg3MTUsImV4cCI6MjA3MDYxNDcxNX0.2YvdIUC41fYsXsT_zJyf2VKvOi2obsJ27fRewQEajmE";
 
       const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON);
 
@@ -40,27 +40,20 @@ const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
         const { data: { user } } = await supabase.auth.getUser();
         const who = document.getElementById('whoami');
         const out = document.getElementById('signout');
-        if (user) {
-          who.textContent = "Prihlásený: " + (user.email || user.id);
-          out.style.display = 'inline-block';
-        } else {
-          who.textContent = "Neprihlásený";
-          out.style.display = 'none';
-        }
+        if (user) { who.textContent = "Prihlásený: " + (user.email || user.id); out.style.display = 'inline-block'; }
+        else { who.textContent = "Neprihlásený"; out.style.display = 'none'; }
       }
 
       document.getElementById('sendLink').onclick = async () => {
         const email = document.getElementById('email').value;
         const { error } = await supabase.auth.signInWithOtp({
-          email,
-          options: { emailRedirectTo: "https://www.cievny.sk" }
+          email, options: { emailRedirectTo: "https://www.cievny.sk" }
         });
         alert(error ? ("Chyba: " + error.message) : "Odošiel magic link. Pozri e‑mail.");
       };
 
       document.getElementById('signout').onclick = async () => {
-        await supabase.auth.signOut();
-        await refreshUser();
+        await supabase.auth.signOut(); await refreshUser();
       };
 
       document.getElementById('save').onclick = async () => {
@@ -68,15 +61,15 @@ const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
         if (!user) { alert("Najprv sa prihlás (magic link)."); return; }
 
         const pseudo = document.getElementById('pseudo').value.trim();
-        const sex    = document.getElementById('sex').value;
-        const yob    = Number(document.getElementById('yob').value);
-        const { error } = await supabase.from('patient').insert({
-          pseudo_id: pseudo, sex, yob, created_by: user.id
-        });
-        document.getElementById('msg').textContent =
-          error ? ("Chyba: " + error.message) : "Uložené ✅ – pozri tabuľku patient v Supabase.";
-        if (error) document.getElementById('msg').style.color = '#b00';
-        else       document.getElementById('msg').style.color = '#0a0';
+        const sex = document.getElementById('sex').value;
+        const yob = Number(document.getElementById('yob').value);
+
+        const { error } = await supabase.from('patient')
+          .insert({ pseudo_id: pseudo, sex, yob, created_by: user.id });
+
+        const msg = document.getElementById('msg');
+        msg.textContent = error ? ("Chyba: " + error.message) : "Uložené ✅ – pozri tabuľku patient v Supabase.";
+        msg.style.color = error ? '#b00' : '#0a0';
       };
 
       refreshUser();
