--- a/tools/index.html
+++ b/tools/index.html
@@ -11,7 +11,7 @@
 <h1>Nástroje</h1>
 <div class="grid">
   <a class="card" href="/tools/PEVAR/"><h3>PEVAR</h3></a>
-  <a class="card" href="/tools/wells/"><h3>Wells DVT</h3></a>
+  <a class="card" href="/tools/claudication/"><h3>SVS IC</h3></a>
   <a class="card" href="/tools/has-bled/"><h3>HAS‑BLED</h3></a>
   <a class="card" href="/tools/cha2ds2-vasc/"><h3>CHA₂DS₂‑VASc</h3></a>
   <a class="card" href="/tools/ceap/"><h3>CEAP</h3></a>
