--- a/tools/index.html
+++ b/tools/index.html
@@ -12,7 +12,7 @@
 <div class="grid">
   <a class="card" href="/tools/PEVAR/"><h3>PEVAR</h3></a>
   <a class="card" href="/tools/claudication/"><h3>SVS IC</h3></a>
-  <a class="card" href="/tools/has-bled/"><h3>HAS‑BLED</h3></a>
+  <a class="card" href="/tools/CAS-generator/"><h3>Generator CAS nálezov</h3></a>
   <a class="card" href="/tools/cha2ds2-vasc/"><h3>CHA₂DS₂‑VASc</h3></a>
   <a class="card" href="/tools/ceap/"><h3>CEAP</h3></a>
   <a class="card" href="/tools/aaa/"><h3>AAA skríning</h3></a>
