--- a/tools/index.html
+++ b/tools/index.html
@@ -13,7 +13,7 @@
   <a class="card" href="/tools/PEVAR/"><h3>PEVAR</h3></a>
   <a class="card" href="/tools/claudication/"><h3>SVS IC</h3></a>
   <a class="card" href="/tools/CAS-generator/"><h3>Generator CAS nálezov</h3></a>
-  <a class="card" href="/tools/cha2ds2-vasc/"><h3>CHA₂DS₂‑VASc</h3></a>
+  <a class="card" href="/tools/CAR/"><h3>Kalkulačka Karotického Arteriálneho Rizika</h3></a>
   <a class="card" href="/tools/ceap/"><h3>CEAP</h3></a>
   <a class="card" href="/tools/aaa/"><h3>AAA skríning</h3></a>
   <a class="card" href="/tools/plaque-rads/"><h3>Plaque‑RADS</h3></a>
