--- a/tools/index.html
+++ b/tools/index.html
@@ -14,7 +14,7 @@
   <a class="card" href="/tools/claudication/"><h3>SVS IC</h3></a>
   <a class="card" href="/tools/CAS-generator/"><h3>Generator CAS nálezov</h3></a>
   <a class="card" href="/tools/CAR/"><h3>Kalkulačka Karotického Arteriálneho Rizika</h3></a>
-  <a class="card" href="/tools/ceap/"><h3>CEAP</h3></a>
+  <a class="card" href="/tools/defektologia/"><h3>Popis defektu DK</h3></a>
   <a class="card" href="/tools/aaa/"><h3>AAA skríning</h3></a>
   <a class="card" href="/tools/plaque-rads/"><h3>Plaque‑RADS</h3></a>
   <a class="card" href="/tools/dvt-pe/"><h3>DVT/PE algoritmus</h3></a>
