--- a/tools/index.html
+++ b/tools/index.html
@@ -16,7 +16,7 @@
   <a class="card" href="/tools/CAR/"><h3>Kalkulačka Karotického Arteriálneho Rizika</h3></a>
   <a class="card" href="/tools/defektologia/"><h3>Popis defektu DK</h3></a>
   <a class="card" href="/tools/SVP"><h3>SVP klasifikacia panva</h3></a>
-  <a class="card" href="/tools/plaque-rads/"><h3>Plaque‑RADS</h3></a>
+  <a class="card" href="/tools/CEAP/"><h3>CEAP klasifikacia</h3></a>
   <a class="card" href="/tools/dvt-pe/"><h3>DVT/PE algoritmus</h3></a>
 </div>
 </body></html>
