--- a/tools/index.html
+++ b/tools/index.html
@@ -17,6 +17,8 @@
   <a class="card" href="/tools/defektologia/"><h3>Popis defektu DK</h3></a>
   <a class="card" href="/tools/SVP"><h3>SVP klasifikacia panva</h3></a>
   <a class="card" href="/tools/CEAP/"><h3>CEAP klasifikacia</h3></a>
-  <a class="card" href="/tools/dvt-pe/"><h3>DVT/PE algoritmus</h3></a>
+  <a class="card" href="/tools/Villata/"><h3>Villalta</h3></a>
+  <a class="card" href="/tools/WELS/"><h3>WELS</h3></a>
+  <a class="card" href="/tools/ALI/"><h3>Rutherford ALI</h3></a>
 </div>
 </body></html>
