--- a/tools/index.html
+++ b/tools/index.html
@@ -18,7 +18,7 @@
   <a class="card" href="/tools/SVP"><h3>SVP klasifikacia panva</h3></a>
   <a class="card" href="/tools/CEAP/"><h3>CEAP klasifikacia</h3></a>
   <a class="card" href="/tools/Villalta/"><h3>Villalta</h3></a>
-  <a class="card" href="/tools/WELS/"><h3>WELS</h3></a>
+  <a class="card" href="/tools/WELLS/"><h3>WELLS</h3></a>
   <a class="card" href="/tools/ALI/"><h3>Rutherford ALI</h3></a>
 </div>
 </body></html>
