--- a/tools/index.html
+++ b/tools/index.html
@@ -20,6 +20,7 @@
   <a class="card" href="/tools/Villa/"><h3>Villalta</h3></a>
   <a class="card" href="/tools/WELLS/"><h3>WELLS</h3></a>
   <a class="card" href="/tools/ALI/"><h3>Rutherford ALI</h3></a>
-  <a class="card" href="/tools/Luska/"><h3>Nutcracker</h3></a>
+  <a class="card" href="/tools/Luska/"><h3>Nutcracker DO NOT WORK</h3></a>
+  <a class="card" href="/tools/AorticTrauma/"><h3>Trauma aorty</h3></a>
 </div>
 </body></html>
