--- a/tools/index.html
+++ b/tools/index.html
@@ -22,5 +22,6 @@
   <a class="card" href="/tools/ALI/"><h3>Rutherford ALI</h3></a>
   <a class="card" href="/tools/Luska/"><h3>Nutcracker DO NOT WORK</h3></a>
   <a class="card" href="/tools/AorticTrauma/"><h3>Trauma aorty</h3></a>
+  <a class="card" href="/tools/Tromboflebitída/"><h3>Tromboflebitída</h3></a>
 </div>
 </body></html>
