--- a/Study/index.html
+++ b/Study/index.html
@@ -10,7 +10,7 @@
 <body>
 <h1>Nástroje</h1>
 <div class="grid">
-  <a class="card" href="/tools/ECST2/"><h3>ECST2</h3></a>
+  <a class="card" href="/study/ECST2/"><h3>ECST2</h3></a>
   <a class="card" href="/tools/claudication/"><h3>SVS IC</h3></a>
   <a class="card" href="/tools/CAS-generator/"><h3>Generator CAS nálezov</h3></a>
   <a class="card" href="/tools/CAR/"><h3>Kalkulačka Karotického Arteriálneho Rizika</h3></a>
