--- a/Study/index.html
+++ b/Study/index.html
@@ -10,18 +10,18 @@
 <body>
 <h1>Nástroje</h1>
 <div class="grid">
-  <a class="card" href="/study/ECST2/"><h3>ECST2</h3></a>
-  <a class="card" href="/tools/claudication/"><h3>SVS IC</h3></a>
-  <a class="card" href="/tools/CAS-generator/"><h3>Generator CAS nálezov</h3></a>
-  <a class="card" href="/tools/CAR/"><h3>Kalkulačka Karotického Arteriálneho Rizika</h3></a>
-  <a class="card" href="/tools/defektologia/"><h3>Popis defektu DK</h3></a>
-  <a class="card" href="/tools/SVP"><h3>SVP klasifikacia panva</h3></a>
-  <a class="card" href="/tools/CEAP/"><h3>CEAP klasifikacia</h3></a>
-  <a class="card" href="/tools/Villa/"><h3>Villalta</h3></a>
-  <a class="card" href="/tools/WELLS/"><h3>WELLS</h3></a>
-  <a class="card" href="/tools/ALI/"><h3>Rutherford ALI</h3></a>
-  <a class="card" href="/tools/Luska/"><h3>Nutcracker DO NOT WORK</h3></a>
-  <a class="card" href="/tools/AorticTrauma/"><h3>Trauma aorty</h3></a>
-  <a class="card" href="/tools/Tromboflebitída/"><h3>Tromboflebitída</h3></a>
+  <a class="card" href="/Study/ECST2/"><h3>ECST2</h3></a>
+  <a class="card" href="/Study/claudication/"><h3>SVS IC</h3></a>
+  <a class="card" href="/Study/CAS-generator/"><h3>Generator CAS nálezov</h3></a>
+  <a class="card" href="/Study/CAR/"><h3>Kalkulačka Karotického Arteriálneho Rizika</h3></a>
+  <a class="card" href="/Study/defektologia/"><h3>Popis defektu DK</h3></a>
+  <a class="card" href="/Study/SVP"><h3>SVP klasifikacia panva</h3></a>
+  <a class="card" href="/Study/CEAP/"><h3>CEAP klasifikacia</h3></a>
+  <a class="card" href="/Study/Villa/"><h3>Villalta</h3></a>
+  <a class="card" href="/Study/WELLS/"><h3>WELLS</h3></a>
+  <a class="card" href="/Study/ALI/"><h3>Rutherford ALI</h3></a>
+  <a class="card" href="/Study/Luska/"><h3>Nutcracker DO NOT WORK</h3></a>
+  <a class="card" href="/Study/AorticTrauma/"><h3>Trauma aorty</h3></a>
+  <a class="card" href="/Study/Tromboflebitída/"><h3>Tromboflebitída</h3></a>
 </div>
 </body></html>
