--- a/Study/index.html
+++ b/Study/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang="sk"><meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Nástroje</title>
+<title>Štúdie</title>
 <style>
  body{font-family:system-ui;max-width:1000px;margin:40px auto;padding:0 16px}
  .grid{display:grid;gap:16px;grid-template-columns:repeat(auto-fill,minmax(220px,1fr))}
@@ -8,7 +8,7 @@
  .card:hover{box-shadow:0 6px 18px rgba(0,0,0,.08);transform:translateY(-1px)}
 </style>
 <body>
-<h1>Nástroje</h1>
+<h1>Štúdie</h1>
 <div class="grid">
   <a class="card" href="/Study/ECST2/"><h3>ECST2</h3></a>
   <a class="card" href="/Study/claudication/"><h3>SVS IC</h3></a>
