--- a/tools/HEIDICAS/index.html
+++ b/tools/HEIDICAS/index.html
@@ -209,7 +209,7 @@
         const conclusionLoader = document.getElementById('conclusion-loader');
         const patientLoader = document.getElementById('patient-loader');
 
-        const apiKey = ""; // Canvas will provide the key
+        const apiKey = AIzaSyAMgobnzEidqURcYnWz_Ay-kkPZc5GTzaw;
         const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
         async function callGemini(prompt, loaderElement, buttonElement, outputElement) {
