Update API URL to use gemini-1.5 model

--- a/tools/HEIDICAS/index.html
+++ b/tools/HEIDICAS/index.html
@@ -210,7 +210,7 @@
         const patientLoader = document.getElementById('patient-loader');
 
         const apiKey = "AIzaSyAMgobnzEidqURcYnWz_Ay-kkPZc5GTzaw";
-        const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
+        const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=${apiKey}`;
 
         async function callGemini(prompt, loaderElement, buttonElement, outputElement) {
             loaderElement.classList.remove('hidden');
