--- a/tools/index.html
+++ b/tools/index.html
@@ -23,6 +23,7 @@
   <a class="card" href="/tools/Luska/"><h3>Nutcracker DO NOT WORK</h3></a>
   <a class="card" href="/tools/AorticTrauma/"><h3>Trauma aorty</h3></a>
   <a class="card" href="/tools/Tromboflebitída/"><h3>Tromboflebitída</h3></a>
-  <a class="card" href="/tools/HEIDICAS/"><h3>Návod HEIDI CAS</h3></a>
+  <a class="card" href="/tools/HEIDICAS/"><h3>Návod HEIDI CArotídy</h3></a>
+  <a class="card" href="/tools/HEIDICASspeech/"><h3>Hlasový CArotídy</h3></a>
 </div>
 </body></html>
