Update API key in index.html

--- a/tools/HEIDICASspeech/index.html
+++ b/tools/HEIDICASspeech/index.html
@@ -210,8 +210,7 @@
     </div>
 
     <script>
-        const apiKey = ""; // DÔLEŽITÉ: Vložte sem váš NOVÝ a BEZPEČNÝ API kľúč
-
+        const apiKey = "AIzaSyAMgobnzEidqURcYnWz_Ay-kkPZc5GTzaw"; 
         // --- Logika pre Gemini AI Asistenta ---
         const conclusionBtn = document.getElementById('generate-conclusion-btn');
         const patientBtn = document.getElementById('generate-patient-btn');
