--- a/tools/index.html
+++ b/tools/index.html
@@ -26,5 +26,6 @@
   <a class="card" href="/tools/HEIDICAS/"><h3>Návod HEIDI CArotídy</h3></a>
   <a class="card" href="/tools/HEIDICASspeech/"><h3>Hlasový CArotídy</h3></a>
   <a class="card" href="/tools/HEIDICASspeech2/"><h3>Hlasový CArotídy test</h3></a>
+ <a class="card" href="/tools/HEIDICASspeech3/"><h3>Hlasový CArotídy test pokrocily</h3></a>
 </div>
 </body></html>
