Add link to Studia in index.html

--- a/tools/index.html
+++ b/tools/index.html
@@ -27,5 +27,6 @@
   <a class="card" href="/tools/HEIDICASspeech/"><h3>Hlasový CArotídy</h3></a>
   <a class="card" href="/tools/HEIDICASspeech2/"><h3>Hlasový CArotídy test</h3></a>
  <a class="card" href="/tools/HEIDICASspeech3/"><h3>Hlasový CArotídy test pokrocily</h3></a>
+ <a class="card" href="/tools/STUDYP/"><h3>Studia</h3></a>
 </div>
 </body></html>
