--- a/tools/Studyp/index.html
+++ b/tools/Studyp/index.html
@@ -1,17 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Send PubMed Link</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Send PubMed Link</title>
+    <!-- Tailwind CSS for styling -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Google Fonts: Inter -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+    </style>
 </head>
-<body>
-  <h2>Send PubMed link to Make Webhook</h2>
-  <form method="POST" action=https://hook.eu2.make.com/u9w9h6jom92mwg51ucpd3l6coep5juk3
-    <label for="url">PubMed Link:</label><br>
-    <input type="text" id="url" name="url"
-           placeholder="https://pubmed.ncbi.nlm.nih.gov/27743617/"
-           size="60" required><br><br>
-    <button type="submit">Send</button>
-  </form>
+<body class="bg-gray-900 text-white flex items-center justify-center min-h-screen">
+
+    <div class="w-full max-w-lg p-8 space-y-6 bg-gray-800 rounded-2xl shadow-lg">
+        <!-- Header Section -->
+        <div>
+            <h2 class="text-3xl font-bold text-center text-cyan-400">Send PubMed Article</h2>
+            <p class="mt-2 text-center text-gray-400">Paste a PubMed link below to send it to the Make.com webhook.</p>
+        </div>
+
+        <!-- Form Section -->
+        <form id="pubmedForm">
+            <div class="space-y-4">
+                <div>
+                    <label for="url" class="sr-only">PubMed Link:</label>
+                    <input type="url" id="url" name="url"
+                           class="w-full px-4 py-3 bg-gray-700 border border-gray-600 rounded-lg text-white placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-cyan-500 transition duration-200"
+                           placeholder="https://pubmed.ncbi.nlm.nih.gov/27743617/"
+                           required>
+                </div>
+                
+                <button type="submit" id="submitButton"
+                        class="w-full flex justify-center items-center px-4 py-3 font-semibold text-gray-900 bg-cyan-400 rounded-lg hover:bg-cyan-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-cyan-500 transition-all duration-300 ease-in-out">
+                    <!-- Spinner icon for loading state -->
+                    <svg id="spinner" class="animate-spin -ml-1 mr-3 h-5 w-5 text-gray-900 hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                        <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+                    </svg>
+                    <span id="buttonText">Send Link</span>
+                </button>
+            </div>
+        </form>
+
+        <!-- Response Message Area -->
+        <div id="responseMessage" class="mt-4 text-center text-sm font-medium"></div>
+    </div>
+
+    <script>
+        const form = document.getElementById('pubmedForm');
+        const urlInput = document.getElementById('url');
+        const submitButton = document.getElementById('submitButton');
+        const buttonText = document.getElementById('buttonText');
+        const spinner = document.getElementById('spinner');
+        const responseMessage = document.getElementById('responseMessage');
+
+        form.addEventListener('submit', async function(event) {
+            event.preventDefault(); // Prevent the default form submission (page reload)
+
+            const pubmedUrl = urlInput.value.trim();
+            if (!pubmedUrl) {
+                showMessage('Please enter a URL.', 'error');
+                return;
+            }
+
+            // --- Set loading state ---
+            setLoading(true);
+            
+            // The Make.com webhook URL from your original form
+            const webhookUrl = 'https://hook.eu2.make.com/u9w9h6jom92mwg51ucpd3l6coep5juk3';
+
+            try {
+                // Send data as JSON. Make sure your Make.com scenario is set to parse JSON.
+                const response = await fetch(webhookUrl, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ url: pubmedUrl }),
+                });
+
+                // Make.com webhooks typically respond with "Accepted" and a 200 status.
+                if (response.ok) {
+                    showMessage('Link sent successfully!', 'success');
+                    urlInput.value = ''; // Clear the input field on success
+                } else {
+                    // Handle non-200 responses
+                    const responseText = await response.text();
+                    throw new Error(`Webhook responded with status: ${response.status}. ${responseText}`);
+                }
+
+            } catch (error) {
+                console.error('Error sending link:', error);
+                showMessage('Failed to send the link. Please try again.', 'error');
+            } finally {
+                // --- Reset loading state ---
+                setLoading(false);
+            }
+        });
+
+        function setLoading(isLoading) {
+            if (isLoading) {
+                submitButton.disabled = true;
+                spinner.classList.remove('hidden');
+                buttonText.textContent = 'Sending...';
+                submitButton.classList.add('opacity-75', 'cursor-not-allowed');
+            } else {
+                submitButton.disabled = false;
+                spinner.classList.add('hidden');
+                buttonText.textContent = 'Send Link';
+                submitButton.classList.remove('opacity-75', 'cursor-not-allowed');
+            }
+        }
+
+        function showMessage(message, type) {
+            responseMessage.textContent = message;
+            if (type === 'success') {
+                responseMessage.className = 'mt-4 text-center text-sm font-medium text-green-400';
+            } else {
+                responseMessage.className = 'mt-4 text-center text-sm font-medium text-red-400';
+            }
+            // Clear the message after a few seconds
+            setTimeout(() => {
+                responseMessage.textContent = '';
+            }, 5000);
+        }
+    </script>
 </body>
 </html>
