Fix links for HEIDICASspeech3 and Upload sections

--- a/tools/index.html
+++ b/tools/index.html
@@ -26,7 +26,7 @@
   <a class="card" href="/tools/HEIDICAS/"><h3>Návod HEIDI CArotídy</h3></a>
   <a class="card" href="/tools/HEIDICASspeech/"><h3>Hlasový CArotídy</h3></a>
   <a class="card" href="/tools/HEIDICASspeech2/"><h3>Hlasový CArotídy test</h3></a>
- <a class="card" href="/tools/HEIDICASspeech3/"><h3>Hlasový CArotídy test pokrocily</h3></a>
- <a class="card" href="/tools/Upload/"><h3>Upload</h3></a>
+  <a class="card" href="/tools/HEIDICASspeech3/"><h3>Hlasový CArotídy test pokrocily</h3></a>
+  <a class="card" href="/tools/upload/"><h3>Upload</h3></a>
 </div>
 </body></html>
