Replace 'Mapa pomoci' link with 'Praktické Nástroje'

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <a href="#" class="text-dark-gray hover:text-wine transition-colors">Ochorenia</a>
                 <a href="#" class="text-dark-gray hover:text-wine transition-colors">Diagnostika</a>
                 <a href="#" class="text-dark-gray hover:text-wine transition-colors">Liečba</a>
-                <a href="#" class="text-dark-gray hover:text-wine transition-colors">Mapa pomoci</a>
+                <a href="./prakticke-nastroje.html" class="text-dark-gray hover:text-wine transition-colors">Praktické Nástroje</a>
             </nav>
             <!-- CTA Tlačidlo -->
             <a href="#" class="hidden md:inline-block btn-green font-semibold px-5 py-2 rounded-lg">
@@ -103,4 +103,6 @@
 
 </body>
 </html>
+
+
 
