Replace HEIDICASspeech link with CMP protocol link

--- a/tools/index.html
+++ b/tools/index.html
@@ -24,7 +24,7 @@
   <a class="card" href="/tools/AorticTrauma/"><h3>Trauma aorty</h3></a>
   <a class="card" href="/tools/Tromboflebitída/"><h3>Tromboflebitída</h3></a>
   <a class="card" href="/tools/HEIDICAS/"><h3>Návod HEIDI CArotídy</h3></a>
-  <a class="card" href="/tools/HEIDICASspeech/"><h3>Hlasový CArotídy</h3></a>
+  <a class="card" href="/tools/CMP/"><h3>CMP protokol</h3></a>
   <a class="card" href="/tools/HEIDICASspeech2/"><h3>Hlasový CArotídy test</h3></a>
   <a class="card" href="/tools/HEIDICASspeech3/"><h3>Hlasový CArotídy test pokrocily</h3></a>
   <a class="card" href="/tools/upload/"><h3>Upload</h3></a>
